fix MacOS Mojave dark mode

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -800,6 +800,7 @@ $Green      : #0FE3AD;
 body {
   @include regulartxt;
   font-family: 'NeueHaasGroteskRegular', sans-serif;
+  background: $White;
 
 }
 h1,h2,h3,h4,h5,h6 {
